# bsddConverter

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: Excel2bSDD_template.xlsx  Excel2bSDD_template1.xlsx  Excel2bSDD_template_curbramp.xlsx
result/: Result.json
src/bsddconverter/: Excel2bSDD_converter.py  __init__.py  gui.py  mapper.py
tests/: test_converter_output.py
tests/data/: Excel2bSDD_converter.py
